2008-09-19  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: glib and gtk+ branched.

2008-09-17  Thomas Thurman  <tthurman@gnome.org>

        * modulesets/gnome-suites-2.24.modules:
	metacity does not depend on libglade.  Closes #552634.

2008-09-16  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules:
	 - new modules from svn.gnome.org: murrine, gtk-css-engine
	 - new repository: matchbox-project.org
	 - new module from matchbox-project.org: libfakekey
	 - new modules from launchpad.net: maximus, window-picker-applet,
	   go-home-applet, netbook-remix-launcher
	   (plus metamodule meta-netbook-remix)

2008-09-11  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.24.modules:
	* modulesets/mobile-2.24.modules:
	Move some of the mobile stuff to gnome-suites-2.24.modules. We have a
	new meta-gnome-mobile-suite target that people can use.
	It's a required step to have an official release of the Mobile suite on
	ftp.gnome.org.

2008-09-11  Iago Toral Quiroga  <itoral@igalia.com>

	* buildbot/AUTHORS:
	* jhbuild/buildbot/changes.py:V
	* jhbuild/buildbot/factory.py:
	* jhbuild/buildbot/scheduler.py:
	* jhbuild/buildbot/status/web/feeds.py:
	* jhbuild/buildbot/status/web/waterfall.py:
	* jhbuild/buildbot/steps.py:
	Added missing authors and updated buildbot copyrigt headers.

2008-09-11  Cosimo Cecchi  <cosimoc@gnome.org>

	* modulesets/gnome-suites-2.24.modules:
	bug-buddy branched for GNOME 2.24.

2008-09-10  Don Scorgie  <dscorgie@svn.gnome.org>

	* modulesets/gnome-external-deps-2.24.modules: 
	Update rarian to 0.8.1 for GNOME 2.24

2008-09-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated iso-codes to the
	latest version, not required by any GNOME module but it fixes a build
	issue (when running with makeclean = True).

2008-09-10  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: catch really badly-timed ctrl-c on
	command exec.  (closes: #551641)
