@@ -1,5 +1,10 @@
 2008-09-19  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/config.py: notify user (unless quiet mode is set) of unknown
+	configuration variables (so a typo (eg make_flags) is easily spotted).
+
+2008-09-19  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-suites-2.24.modules: glib and gtk+ branched.
 
 2008-09-17  Thomas Thurman  <tthurman@gnome.org>
